re-order generosity chapter

--- a/GenerosityIntro.tex
+++ b/GenerosityIntro.tex
@@ -1,12 +1,12 @@
 \cleardoublepage
 {\small
 
-Materially speaking, we know that it is better to help many than to live in luxury \footnote{Musonius Rufus, \cite{RLS}}, we don't need a top of the range car more than the homeless man needs the next meal. Professionally we can be equally tight fisted, grabbing at praise from our superiors and doing our peers down so we are first in line for the bonus and promotion. We don't need to do either of those things of course. Allowing others to take the credit for work we've played a part in or setting others up for success can feel like career suicide but, with time, we'll be seen as the person who brings up strong talent and the person we need on the project to make sure it's a roaring success.
+Materially speaking, we know that it is better to help many than to live in luxury \footnote{Musonius Rufus, \cite{RLS}}, we don't need a top of the range car more than the homeless man needs the next meal. Professionally we can be equally tight fisted, grabbing at praise from our superiors and doing our peers down so we are first in line for the bonus and promotion. We don't need to do either of those things of course. Allowing others to take the credit for work we've played a part in or setting others up for success can feel like career suicide but it's character taits like this that, with time, mean we'll be seen as the person who brings up strong talent and the person needed on the project to make sure it's a roaring success.
 
 Even when we behave like this, we know other people are selfish, they will upset us and they'll unravel our plans. It doesn't mean they're out to get us (\S \ref{H_RAZOR} and \ref{MA_TRUST}) even though it may feel like that from time to time.
 
-As hard as it is, if we want to make progress towards our aims, we need to give people a break. It's part of our duty to lead by example. We know that focussing on things that happened in the past is fruitless, it won't change the situation and only adds to our own stresses. There are few things more pointless than behaviour like this. We don't have to forget the events, that might mean we'd be surprised next time around but turning them over and over?
+As hard as it is, if we want to make progress towards our aims, we need to give other people (and ourselves) a break. It's part of our duty to lead by example. We know that focussing on things that happened in the past is fruitless, it won't change the situation and only adds to our own stresses. There are few things more pointless than behaviour like this. We don't have to forget the events, that might mean we'd be surprised next time around but turning them over and over?
 
-There's no need to harbour grudges (\S)\ref{MM_HATE}, we don't have that time to waste, but we do need to remember the times we've spoken sharply or hurtfully and we've been forgiven and pass that favour on (\S \ref{SL_GIVE} and \ref{S_DO}). 
+There's no need to harbour grudges (\S \ref{MM_HATE}), we don't have that time to waste, but we do need to remember the times we've spoken sharply or hurtfully and we've been forgiven and pass that favour on (\S \ref{SL_GIVE} and \ref{S_DO}). 
 
 }
