--- a/Generosity.tex
+++ b/Generosity.tex
@@ -4,7 +4,11 @@
 
 \smallQuote{MA_GIVE}{You've given and they've received it. And yet, like an idiot, you keep holding out for more. To be credited with a good deed? To be repaid in kind? why?}{Marcus Aurelius}{HT_CREDIT}
 
+\smallQuote{BT_GIVE}{Always give with remembering and receive without forgetting}{Brian Tracy}{S_DO}{}
+
 \smallQuote{MM_HATE}{Resentment is like taking poison and waiting for the other person to die}{Malachi McCourt}{TS_HHH}
+
+\smallQuote{AL_JWWWB}{they are just what we would be in their situation}{Abraham Lincoln}{}{} 
 
 \cleartorightpage
 
@@ -19,45 +23,40 @@
 \end{itemize}}{Marcus Aurelius}{SL_GIVE}{People are going to be like that from time to time and so long as you remember that you've been like that too you can see the behaviour for what it is.}
 
 
-%\smallQuote{EC_FTP}{Never say that people are evil. You just need to find the pin.}{\'{E}mile-Auguste Chartier}{} 
-
-
 %Roman playwright and poet Terence gave voice when he wrote: ‘I am human: nothing human is foreign to me’ 
-
-
-\HugeQuote{H_RAZOR}{Hanlon's Razor}{: \newline
-Never attribute to malice that which can be adequately explained by incompetence}{Robert J. Hanlon}{SL_GIVE}{or weakness or fear or hunger or \ldots}
 
 \hugeQuote{MA_HATE}{Someone hates me?}{ Their problem.\newline
 Mine: to be patient and cheeerful with everyone (including them)}{Marcus Aurelius}{}{}
 
-\hugeQuote{RH_HATE}{Because\ldots\newline
-hate will get you every time}{\newline
-Every time.}{Ryan Holiday}{}{}
-%hugeQuote{KT_GTWF}{You're more than the three or four you'd go to war for.}{}{Kate Tempest}{}{} 
-%\smallQuote{they are just what we would be in their situation}{Abraham Lincoln}{}{} 
+% \hugeQuote{RH_HATE}{Because\ldots\newline
+% hate will get you every time}{\newline
+% Every time.}{Ryan Holiday}{}{}
+
+\HugeQuote{DL_KINDNESS}{Show kindness whenever possible.}{}{Dalai Lama}{S_DO}{Hint: it's always possible.}
+
+
+\cleartoleftpage
+\hugeQuote{MA_MISTAKE}{That you've made enough mistakes yourself}{. You're just like them.}{Marcus Aurelius}{SL_GIVE}{}
+
 
 \hugeQuote{MDM_SELF}{If talking to oneself did not look so mad}{ no day would go by without my growling to myself \say{you silly shit!}\newline
-Yet, I do not intend that to be the definition of me}{Michel De Montaigne}{HM_DWW}{}
+Yet, I do not intend that to be the definition of me.}{Michel De Montaigne}{HM_DWW}{}
 
+\cleartorightpage
 
-\hugeQuote{BT_GIVE}{Always give with remembering}{ and receive without forgetting}{Brian Tracy}{S_DO}{}
-
-\hugeQuote{DL_KINDNESS}{Show kindness whenever possible.}{}{Dalai Lama}{S_DO}{Hint: it's always possible.}
-
-\hugeQuote{MA_MISTAKE}{That you've made enough mistakes yourself}{. Your just like them.}{Marcus Aurelius}{SL_GIVE}{}
-
-\HugeQuote{SL_GIVE}{Forgiveness means a long memory of all the times when we wouldn't have gotten through life with someone cutting us some slack.}{ It is recognising that living with others is not possible without excusing errors}{School of Life}{}{See the modern virtues \llink{http://bit.ly/1XoP0tE}}
+\HugeQuote{SL_GIVE}{Forgiveness means a long memory of all the times when we wouldn't have gotten through life with someone cutting us some slack.}{ It is recognising that living with others is not possible without excusing errors.}{School of Life}{}{See the modern virtues \llink{http://bit.ly/1XoP0tE}}
 %http://thephilosophersmail.com/wp-content/uploads/2014/04/Ten-Virtues.pdf
 
-\HugeQuote{E_ISR}{It seemed right to him}{}{Epictetus}{}{}
 
+\cleartoleftpage
+\hugeQuote{EC_FTP}{Never say that people are evil.}{ You just need to find the pin.}{\'{E}mile-Auguste Chartier}{} 
 
-%\smallQuote{EC_FTP}{Never say that people are evil. You just need to find the pin.}{\'{E}mile-Auguste Chartier}{} 
+\HugeQuote{E_ISR}{It seemed right to him.}{}{Epictetus}{}{}
 
+\cleartorightpage
 \HugeQuote{H_RAZOR}{Hanlon's Razor}{: \newline
-Never attribute to malice that which can be adequately explained by incompetence}{Robert J. Hanlon}{SL_GIVE}{or weakness or fear or hunger or \ldots}
+Never attribute to malice that which can be adequately explained by incompetence.}{Robert J. Hanlon}{SL_GIVE}{or weakness or fear or hunger or \ldots}
 
 %Unsure on which chapter
-\hugeQuote{LT_PAST}{Forgiveness means giving up hope}{ of a better past}{Lily Tomlin}{MA_NOW1}{}
+%\hugeQuote{LT_PAST}{Forgiveness means giving up hope}{ of a better past}{Lily Tomlin}{MA_NOW1}{}
 
