--- a/Humility.tex
+++ b/Humility.tex
@@ -1,6 +1,6 @@
 \input{HumilityIntro.tex}
 
-
+\cleartorightpage
 
 \HugeQuote{TD_UNIQUE}{You are not a beautiful and unique snowflake.}{}{Tyler Durden}{}{}
 
@@ -24,10 +24,8 @@
 
 \hugeQuote{E_LUCK}{Foolish is the man who delights in his good fortune, supposing it will never leave him.}{}{Euripides}{S_ENDURE}{}
 \hugeQuote{MT_VISIT}{If you're not humble}{ life will visit humility upon you}{Mike Tyson}{}{}
-\hugeQuote{MA_LUCK1}{To accept it without arrogance}{, to let it go with indifference}{Marcus Aurelius}{}{}
 
-%growth mindset
-\cleartoleftpage
+\hugeQuote{MA_LUCK1}{To accept it without arrogance}{, to let it go with indifference}{Marcus Aurelius}{}{}
 %possible link to seneca quote about /thoughts at the door/
 \smallQuote{MA_ALWAYS}{Everywhere, at each moment, you have the option:
 \begin{itemize}
@@ -35,6 +33,9 @@
 \item to treat each person as he should be treated
 \item to approach this thought with care, so that nothing irrational creeps in
 \end{itemize}}{Marcus Aurelius}{WG_JUDGE}{}
+%growth mindset
+\cleartoleftpage
+
 
 \smallQuote{ME_BEGIN}{Be willing to be a beginner every single morning}{Meister Eckhart}{EP_FOOL}{}
 \smallQuote{MC_BOAST}{Boasting is what a boy does, because he has no real  effect on the world.}{Matthew Crawford}{C_BOAST}
