add quotes from Uta Birth and Wolfgang Tillmans

--- a/Focus.tex
+++ b/Focus.tex
@@ -60,6 +60,9 @@ Ask yourself at every moment \say{is this necessary?}}
 
 % \hugeQuote{MA_OBSERVE}{And so I'll treat them as the law that binds us requires}{. With kindness and with justice.\newline And the inconsequential things?\newline I'll do my best to treat them as they deserve.}{Marcus Aurelius}{}{}
 
+\smallQuote{UB_DL}{Photography is a subtractive process, you have the whole world and you select a small square of it.}{Uta Birth}{}{}
+
+
 \HugeQuote{PD_DL}{There is nothing so useless}{ as doing efficiently that which should not be done at all.}{Peter Drucker}{}{}
 
 \cleartoleftpage
@@ -70,6 +73,8 @@ A task will swell in (perceived) importance and complexity in relation to the ti
 \hugeQuote{OW_HW}{Hard work}{ is simply the refuge of people how have nothing better to do}{Oscar Wilde}{}{}
 
 \hugeQuote{BD_LIFE}{A man is successful}{ if he gets up in the morning, goes to bed at night and in between does what he wants to.}{Bod Dylan}{BJ_DWYL}{}
+
+\smallQuote{WT_WORK}{It sounds a bit square, but I've found that the chances of getting a good result are just so much higher when you spend at least eight hours a day on your work.}{Wolfgang Tillmans}{}{}
 
 \cleartoleftpage
 
