add tentative quote from April Gornik

--- a/Confidence.tex
+++ b/Confidence.tex
@@ -43,3 +43,5 @@ Whatever.}{Danielle La Porte}{MA_DWH}{}
 \hugeQuote{LB_SEP}{Don't let someone else's opinion of you become your reality}{}{Les Brown}{}{}
 
 \hugeQuote{HM_MIRACE}{Don't look for miracles}{ you yourself are the miracle}{Henry Miller}{}{}
+
+%\smallQuote{AG_WORK}{Don't pretend you're not proud of your work}{April Gornik}{}{}
