add two new quotes

--- a/Resilience.tex
+++ b/Resilience.tex
@@ -91,6 +91,10 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 
 % \hugeQuote{MA_PERSIST1}{So keep at it}{ until it's fully digested. A strong stomach digests whatever it eats. A blazing fire takes whatever you throw on it and makes light and flame.}{Marcus Aurelius}{CP_FAIL}{}
 
+\smallQuote{JJ_WORK}{Take a canvas. Put a mark on it. Put another mark on it.}{Jasper Johns}{}{}
+
+\HugeQuote{CC_WORK}{Inspiration is for amateurs}{- the rest of us just show up and get to work}{Chuck Close}{}{}
+
 \hugeQuote{MAR_PERSIST}{Courage doesn't always roar.}{ Sometimes courage is the quiet voice at the end of the day whispering: \newline \say{I will try again tomorrow.}}{Mary Anne Radmach}{CP_FAIL}{}
 
 \hugeQuote{MA_PERSIST2}{Disgraceful}{ for the soul to give up while the body is still going strong}{Marcus Aurelius}{}{}
