--- a/Confidence.tex
+++ b/Confidence.tex
@@ -1,48 +1,57 @@
 \input{ConfidenceIntro.tex}
 
+%uncertainty
 \smallQuote{RG_CHAOS}{Let go and move with the chaos that presents itself to you. 
 From within it you will find endless oppourtunities that elude other people}{Robert Greene}{}
+
+%\smallQuote{AG_WORK}{Don't pretend you're not proud of your work}{April Gornik}{C_BOAST}{}
+
 
 \cleartorightpage
 
 \hugeQuote{AN_COURAGE}{Life shrinks or expands}{ in proportion to one's courage.}{Anais Nin}{JKZ_ENDURE}{}
 
-\hugeQuote{SL_SC}{So often self confidence is dependent on the basic but elusive premise}{\newline
+\hugeQuote{SL_SC}{So often self confidence is dependent on the basic but elusive premise}{:\newline
 \say{I'm fine as I am}}{School of Life}{}
 {\href{http://www.thebookoflife.org/on-confidence/}{http://www.thebookoflife.org/on-confidence/}} %also include the more confident notes maybe 
 
-\hugeQuote{HM_DWW}{Don't water your weeds}{}{Harvey Mackay}{}{}
+%failure
+\cleartoleftpage
+\smallQuote{RH_FAIL}{You've already made it this far, might as well take one more step.}{Ryan Holiday}{JP_STAND}
 
-\smallQuote{RG_FAIL}{Any knid of resistance or obstacle that crosses your path should be seen as yet another chance to improve your work}{Robert Greene}{}
+\smallQuote{RG_FAIL}{Any kind of resistance or obstacle that crosses your path should be seen as yet another chance to improve your work.}{Robert Greene}{}
+\smallQuote{MA_FAIL}{Not to feel exasperated, despondant and defeated because your days aren't packed with wise and moral actions. But to get back up when you fail, to celebrate behaving like a human (however imperfectly) and fully embrace the pursuit you've embarked on.}{Marcus Aurelius}{}
+\cleartorightpage
+\hugeQuote{SP_FAIL}{A failed attempt}{ is just that and nothing more, it’s not the end and it’s not fatal. Keep at it.}{}{}
 
-\hugeQuote{CP_FAIL}{You can adopt the attitude that there's nothing you can do}{, or you can see the challenge as a call to action}{Catherine Pulsifer}{S_CUCUMBER}{}
-\smallQuote{RH_FAIL}{You've already made it this far, might as well take one more step}{Ryan Holiday}{JP_STAND}
-\smallQuote{MA_FAIL}{But to get back up when you fail, to celebrate behaving like a human (however imperfectly) and fully embrace the pursuit you've embarked on.}{Marcus Aurelius}{}
+\hugeQuote{CP_FAIL}{You can adopt the attitude that there's nothing you can do}{, or you can see the challenge as a call to action.}{Catherine Pulsifer}{S_CUCUMBER}{}
 
-\hugeQuote{DLP_FAIL}{You will fail eventually.}{\newline
-Whatever.}{Danielle La Porte}{MA_DWH}{}
-\hugeQuote{NT_FAIL}{A mistake is not something to be determined after the fact}{ but in the light of information up to that point}{Nassim Taleb}{}{}
+\hugeQuote{NT_FAIL}{A mistake is not something to be determined after the fact}{ but in the light of information up to that point.}{Nassim Taleb}{}{}
+\cleartoleftpage
+\HugeQuote{DLP_FAIL}{You will fail eventually.}{\newline
+Whatever.}{Danielle La Porte}{MA_DWH}{It's how you respond to it that counts.}
 
-\smallQuote{SP_FAIL}{A failed attempt is just that and nothing more, it’s not the end and it’s not fatal. Keep at it.}{}{}
 
+
+\cleartorightpage
 \hugeQuote{NH_FAIL}{Failure connot cope with persistence.}{}{Napoleon Hill}{MAR_PERSIST}{}
 \hugeQuote{WS_FEAR}{Our doubts are traitors}{, and make us lose the good we might oft win be fearing to attempt.}{William Shakespeare}{}{}
 
-\hugeQuote{RH_DESTROY}{You don't have to be the best}{ you just have to be harder to destroy. You have to be relentless}{Ryan Holiday}{NH_FAIL}{}
+\hugeQuote{RH_DESTROY}{You don't have to be the best}{ you just have to be harder to destroy. You have to be relentless.}{Ryan Holiday}{NH_FAIL}{}
 
+%promotion
+\cleartoleftpage
+\smallQuote{RG_RADIATE}{Understand: you should be radiating confidence not arrogance and disdain}{Robert Greene}{}
+\cleartorightpage
 \hugeQuote{RG_DISPLAY}{You cannot display yourself too brazenly}{, yet you must get noticed. Create a distinctive (a subtly distinctive) style and image.}{Robert Greene}{}{}
 
-\smallQuote{RG_RADIATE}{Understand: you should be radiating confidence not arrogance and disdain}{Robert Greene}{}
+\hugeQuote{EG_ASK}{He who demands litte}{ gets it.}{Ellen Glasgow}{}{}
 
-
-
-\hugeQuote{EG_ASK}{He who demands litte}{ gets it.}{Ellen Glasgow}{}{} % cf DLP asking increases
-
+\cleartoleftpage
 \hugeQuote{DLP_NYG}{You are not}{ your genes}{Danielle La Porte}{}{}
 
+\hugeQuote{LB_SEP}{Don't let someone else's opinion of you become your reality.}{}{Les Brown}{}{}
+\cleartorightpage
+\hugeQuote{HM_DWW}{Don't water your weeds}{}{Harvey Mackay}{}{}
 
-\hugeQuote{LB_SEP}{Don't let someone else's opinion of you become your reality}{}{Les Brown}{}{}
-
-\hugeQuote{HM_MIRACE}{Don't look for miracles}{ you yourself are the miracle}{Henry Miller}{}{}
-
-%\smallQuote{AG_WORK}{Don't pretend you're not proud of your work}{April Gornik}{}{}
+%\hugeQuote{HM_MIRACE}{Don't look for miracles}{ you yourself are the miracle}{Henry Miller}{}{}
