--- a/ConfidenceIntro.tex
+++ b/ConfidenceIntro.tex
@@ -11,7 +11,7 @@ Incidentally, if we manage to consistently do those things we stand a much bette
 
 We don't have control of how things will turn out measured by external metrics and that can be a big hit on our confidence, but if we change our success criteria focussing on internal metrics we have a better chance of succeeding. 
 
-Being bold enough to act in the face of that uncertainty. Thats' what we're aiming for.
+Being bold enough to act in the face of that uncertainty. That's what we're aiming for.
 
 
 
