correct missing punctuation

--- a/Focus.tex
+++ b/Focus.tex
@@ -24,7 +24,7 @@
 \hugeQuote{H_OWN}{They should try to subordinate things to themselves}{ not themselves to things.}{Horace}{RH_HMY}{}
 
 \hugeQuote{FC_OWN}{The things you used to own}{. Now they own you}{Jack, Fight Club}{}{}
-
+%todo reposition
 \hugeQuote{HDT_BACK}{Never look back}{ unless you're planning to go that way.}{Henry David Thoreau}{}{}
 
 %todo: possibly drop
@@ -42,7 +42,7 @@
 \smallQuote{BJ_DWYL}{If you're not doing what you love, you're wasting your time.}{Billy Joel}{OW_HW}
 
 %todo: position ? 
-\hugeQuote{EP_FOOL}{If you wish to improve}{, be content to appear clueless or stupid in extraneous matters}{Epictetus}{}{}
+\hugeQuote{EP_FOOL}{If you wish to improve}{, be content to appear clueless or stupid in extraneous matters.}{Epictetus}{}{}
 
 \hugeQuote{MT_NOMFUP}{NoMFuP}{}{Malcolm Tucker}{ST_UTU}{Handy to remind ourselves what we should be paying attention to.}
 
@@ -59,8 +59,8 @@ Ask yourself at every moment \say{is this necessary?}}
 \HugeQuote{MA_SMALL}{You're better off not giving the small things more time than they deserve}{}{Marcus Aurelius}{}
 
 % \hugeQuote{MA_OBSERVE}{And so I'll treat them as the law that binds us requires}{. With kindness and with justice.\newline And the inconsequential things?\newline I'll do my best to treat them as they deserve.}{Marcus Aurelius}{}{}
-
-\smallQuote{UB_DL}{Photography is a subtractive process, you have the whole world and you select a small square of it.}{Uta Birth}{}{}
+% todo reposition 
+\smallQuote{UB_DL}{Photography is a subtractive process, you have the whole world and you select a small square of it.}{Uta Birth}{TF_SLO}{}
 
 
 \HugeQuote{PD_DL}{There is nothing so useless}{ as doing efficiently that which should not be done at all.}{Peter Drucker}{}{}
