add corrections to leadership notes

--- a/Leadership.tex
+++ b/Leadership.tex
@@ -6,18 +6,23 @@
 
 \smallQuote{RH_RAW}{Races are won here not there. Where it is hardest to speed up not easiest}{Ryan Holiday}{}
 
-\hugeQuote{RG_CONFLICT}{The more conflicts and difficult situations you put yourself through}{ the more battle tested your mind will be.}{Robert Greene}{RH_RAW}{} %RH_HMY
+\smallQuote{RG_CONFLICT}{The more conflicts and difficult situations you put yourself through the more battle tested your mind will be.}{Robert Greene}{RH_RAW}{} %RH_HMY
 
+%size of team 
+%%%%%%%%%%%%%%%%%
 \cleartoleftpage
-
-\smallQuote{MR_NL}{A physician who heals a few is no less a doctor than one who heals many}{Musonius Rufus}{} 
-
-\cleartorightpage
 
 \hugeQuote{FB_WISE}{Wise men make more opportunites than they find}{}{Francis Bacon}{}{}
 
-
 \hugeQuote{RLS_SEED}{Don't judge each day by the harvest you reep}{ but by the seeds you sow.}{Robert Louis Stephenson}{}{}
+
+\cleartorightpage
+
+\HugeQuote{MR_NL}{A physician who heals a few}{ is no less a doctor than one who heals many}{Musonius Rufus}{} 
+
+
+% right attention
+%%%%%%%%%%%%%%%%%
 
 \cleartoleftpage
 
@@ -32,7 +37,9 @@
 \hugeQuote{AE_DO}{People do not change}{, they are merely revealed.}{Anne Enright}{}{}
 
 
-\HugeQuote{S_DO}{Kindness gives birth to kindness}{}{Seneca}{}{}
+\cleartorightpage
+% todo generosity ? 
+% \HugeQuote{S_DO}{Kindness gives birth to kindness}{}{Seneca}{}{}
 
 \hugeQuote{BW_TALK}{There is no use talking about the problem}{ unless you talk about the solution}{Betty Williams}{}{}
 
@@ -45,15 +52,18 @@
 \hugeQuote{SP_QUIET}{Be quiet}{, work hard, stay healthy}{}{}{}
 
 
-\hugeQuote{SC_BAD}{\texttt{use strict;}}{\newline good servant, bad master.}{Simon Cozens}{}{}
+\HugeQuote{SC_BAD}{\texttt{use strict;}}{\newline good servant, bad master.}{Simon Cozens}{}{}
 
-\smallQuote{MR_CHIEF}{Kings soon perish who make a habit if justifying their actions to their subjects by saying \say{I have the power} rather than \say{it is my duty}}{Musonius Rufus}{} 
+\hugeQuote{MR_CHIEF}{Kings soon perish}{ who make a habit of justifying their actions to their subjects by saying \say{I have the power} rather than \say{it is my duty}}{Musonius Rufus}{} 
 
-\hugeQuote{LT_CHIEF}{Be the chief}{ but never the lord}{Lao Tzu}{}{}
-\hugeQuote{KR_SPORT}{One man practicing sportsmanship}{ is better than 100 teaching it}{Knute Roche}{HF_REP}{}
+\hugeQuote{LT_CHIEF}{Be the chief}{ but never the lord.}{Lao Tzu}{}{}
+\hugeQuote{KR_SPORT}{One man practicing sportsmanship}{ is better than 100 teaching it.}{Knute Roche}{HF_REP}{}
 
-\hugeQuote{RH_HMY}{Life is defined by how much you do}{, how often you took the difficult path and were rewarded for it}{Ryan Holiday}{}{(not by how much you own)}
+\hugeQuote{RH_HMY}{Life is defined by how much you do}{, how often you took the difficult path and were rewarded for it.}{Ryan Holiday}{}{(not by how much you own)}
 
+
+% succesful completion
+%%%%%%%%%%%%%%%%%%%%%%
 \hugeQuote{ES_EFFORT}{Super-human effort}{ is not worth a damn unless it produces results.}{Shackleton}{}{}
 
 \hugeQuote{BAML_RERR}{Recognise effort}{\newline
@@ -67,16 +77,15 @@ Reward results}{BAML}{}{}
 
 
 
+% did what he thought was right  
 
 \hugeQuote{MA_ASK}{Learn to ask of all actions}{, \say{why are they doing that?}\newline
 Starting with your own.}{Marcus Aurelius}{H_RAZOR}{}
 
-
-
 \hugeQuote{MA_CONTROL1}{If it's in your control why do it?}{ If it's in someone else's then who are you blaming?\newline
 Blame no one\newline
 Set people straight if you can. If not just repair the damage.}{Marcus Aurelius}{SL_GIVE}{}
-
+% choose one or the other  
 \hugeQuote{MA_CORRECT}{If they've done something wrong}{, correct them gently and show them how to improve.\newline
 If you can't do that the blame lies with you or no one.}{Marcus Aurelius}{HT_CREDIT}{}
 
@@ -98,20 +107,24 @@ If you can't do that the blame lies with you or no one.}{Marcus Aurelius}{HT_CRE
 
 \hugeQuote{LR_WORK}{It takes a great talent and skill}{ to conceal a great talent and skill.}{François de La Rochefoucauld}{M_WORK}{}
 
-\hugeQuote{RG_WORK2}{Everything is judged by its appearance}{; what is unseen counts for nothing. Do not get lost in the crowd or burried in oblivion}{Robert Greene}{}{}
+%\hugeQuote{RG_WORK2}{Everything is judged by its appearance}{; what is unseen counts for nothing. Do not get lost in the crowd or burried in oblivion.}{Robert Greene}{}{}
 
 
-\hugeQuote{CWB_FEEL}{They may forget what you said}{ but they will never forget how you made them feel.}{Carl W. Buechner}{}{}
+%\hugeQuote{CWB_FEEL}{They may forget what you said}{ but they will never forget how you made them feel.}{Carl W. Buechner}{}{}
+
+
+
+% transparency
+%%%%%%%%%%%%%%%
+\cleartorightpage
 
 \hugeQuote{TF_DISCLOSURE}{Disclosure is disinfectant}{}{Tim Ferriss}{}{}
 
 \hugeQuote{S_DISCLOSURE}{All defects are lighter in the open}{. They are most pernicious when concealed beneath a pretense of soundness}{Seneca}{}{We don't need to post our defects on Facebook, but we can spend some time thinking about them\llink{http://thephilosophersmail.com/PhilosophicalMeditation.pdf}}
 
-\smallQuote{PS_RAGE}{Patience Wounded too often becomes rage.}{Publius Syrus}{}
+%todo better location for this? generosity maybe 
+%\smallQuote{PS_RAGE}{Patience Wounded too often becomes rage.}{Publius Syrus}{}
 
-
-\hugeQuote{FR_DTR}{When you do things right}{, people will wonder if you've done anything at all}{Remains of a computerised space probe, Futurama}{}{} 
-
-\HugeQuote{KT_NUP}{It's not up to us to make this a better place}{}{Kate Tempest}{}{It is. We can do it one person at a time.} 
-
+\cleartorightpage
+\HugeQuote{FR_DTR}{When you do things right}{, people will wonder if you've done anything at all}{Remains of a computerised space probe, Futurama}{}{} 
 
