--- a/LeadershipIntro.tex
+++ b/LeadershipIntro.tex
@@ -3,7 +3,7 @@
 
 It doesn't matter whether we're leading an expedition, a household or just ourselves our behaviour is always influencing those around us and our actions speak volumes about the sort of people we are.
 
-We're holding ourselves to an incredibly high set of standards; we need to recognise the efforts of others and be generous in our interpretation of their actions (\S \ref{SL_GIVE}), show gratitude when things go well, have an unquenchable thirst for knowledge, be open to correction (from anyone) in the light of better information, let others know they're important to us by putting everything else to one side and focussing entirely on them when they need us (and making sure we're available when they do). Consistently measuring ourselves against these standards will be hard and humbling for us. We will slip up from time to time. What matters is how we deal with those bumps in the road, will we let our heads drop or will we use the situation to our benefit? (\S \ref{CP_FAIL}) With sustained practice the gaps between the failures will lengthen and we'll set a better example as a result.
+We're holding ourselves to an incredibly high set of standards; we need to recognise the efforts of others and be generous in our interpretation of their actions (\S \ref{SL_GIVE}), show gratitude when things go well, have an unquenchable thirst for knowledge, be open to correction (from anyone) in the light of better information, let others know they're important to us by putting everything else to one side and focussing entirely on them when they need us. Consistently measuring ourselves against these standards will be hard and humbling for us. We will slip up from time to time. What matters is how we deal with those bumps in the road, will we let our heads drop or will we use the situation to our benefit? (\S \ref{CP_FAIL}) With sustained practice the gaps between the failures will lengthen and we'll set a better example as a result.
 
 When things go wrong we need to move with a level of determination and confidence demonstrating that we have thought about our options and made a conscious choice about the next steps (\S \ref{BW_TALK}). That's when we can be the most helpful, that's when we can calm things and that's when we're needed most.
 
