re-order leadership notes

--- a/Leadership.tex
+++ b/Leadership.tex
@@ -2,39 +2,43 @@
 \input{LeadershipIntro.tex}
 
 
-\smallQuote{BB_PRACTICE}{When you are not practicing remember that someone else is and when you meet him he will win.}{Bill Bradley}{}
-
-\smallQuote{RH_RAW}{Races are won here not there. Where it is hardest to speed up not easiest}{Ryan Holiday}{}
-
-\smallQuote{RG_CONFLICT}{The more conflicts and difficult situations you put yourself through the more battle tested your mind will be.}{Robert Greene}{RH_RAW}{} %RH_HMY
-
-%size of team 
-%%%%%%%%%%%%%%%%%
+%sphere of influence
+%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
 
-\hugeQuote{FB_WISE}{Wise men make more opportunites than they find}{}{Francis Bacon}{}{}
+\hugeQuote{FB_WISE}{Wise men make more opportunites than they find.}{}{Francis Bacon}{}{}
 
 \hugeQuote{RLS_SEED}{Don't judge each day by the harvest you reep}{ but by the seeds you sow.}{Robert Louis Stephenson}{}{}
 
 \cleartorightpage
 
-\HugeQuote{MR_NL}{A physician who heals a few}{ is no less a doctor than one who heals many}{Musonius Rufus}{} 
+\HugeQuote{MR_NL}{A physician who heals a few}{ is no less a doctor than one who heals many.}{Musonius Rufus}{} 
 
+% Difficulty
+%%%%%%%%%%%%
+
+\smallQuote{RH_RAW}{Races are won here not there. Where it is hardest to speed up not easiest.}{Ryan Holiday}{}
+
+\smallQuote{BB_PRACTICE}{When you are not practicing remember that someone else is and when you meet him he will win.}{Bill Bradley}{}
+
+\smallQuote{RG_CONFLICT}{The more conflicts and difficult situations you put yourself through the more battle tested your mind will be.}{Robert Greene}{RH_RAW}{} %RH_HMY
 
 % right attention
 %%%%%%%%%%%%%%%%%
 
 \cleartoleftpage
 
-\smallQuote{AC_DO}{As I grow older I pay less attention to what people say, I just watch what they do.}{Andrew Carnegie}{}
+\smallQuote{RL_LISTEN}{Learning to listen is the most valuable thing you can do}{Robert Love}{AE_DO}{}
 
-\smallQuote{RG_DO}{Pay less attention to the words people use and greater attention to the tone of their voice, the look in their eyes and their body language}{Robert Greene}{MA_LISTEN}
+\smallQuote{AC_DO}{As I grow older I pay less attention to what people say, I just watch what they do.}{Andrew Carnegie}{AE_DO}
 
-\smallQuote{RL_LISTEN}{Learning to listen is the most valuable thing you can do}{Robert Love}{AC_DO}{}
+\smallQuote{MA_LISTEN}{Practice really hearing what people say. Do your best to get inside their minds.}{Marcus Aurelius}{AE_DO}{}
 
-\HugeQuote{MA_LISTEN}{Practice really hearing}{ what people say. Do your best to get inside their minds.}{Marcus Aurelius}{RL_LISTEN}{}
+\smallQuote{RG_DO}{Pay less attention to the words people use and greater attention to the tone of their voice, the look in their eyes and their body language.}{Robert Greene}{AE_DO}
 
-\hugeQuote{AE_DO}{People do not change}{, they are merely revealed.}{Anne Enright}{}{}
+
+\cleartorightpage
+\HugeQuote{AE_DO}{People do not change}{, they are merely revealed.}{Anne Enright}{}{}
 
 
 \cleartorightpage
@@ -47,34 +51,21 @@
 
 \hugeQuote{HF_REP}{You can't build a reputation}{ on what you're going to do.}{Henry Ford}{}{}
 
-\hugeQuote{RG_BOAST}{Be careful not to boast}{ of any success.}{Robert Greene}{MC_BOAST}{}
+% \hugeQuote{RG_BOAST}{Be careful not to boast}{ of any success.}{Robert Greene}{MC_BOAST}{}
 
 \hugeQuote{SP_QUIET}{Be quiet}{, work hard, stay healthy}{}{}{}
 
 
-\HugeQuote{SC_BAD}{\texttt{use strict;}}{\newline good servant, bad master.}{Simon Cozens}{}{}
-
-\hugeQuote{MR_CHIEF}{Kings soon perish}{ who make a habit of justifying their actions to their subjects by saying \say{I have the power} rather than \say{it is my duty}}{Musonius Rufus}{} 
+% exercise of power
+%%%%%%%%%%%%%%%%%%%
+\cleartoleftpage
+\hugeQuote{SC_BAD}{\texttt{use strict;}}{\newline good servant, bad master.}{Simon Cozens}{}{}
 
 \hugeQuote{LT_CHIEF}{Be the chief}{ but never the lord.}{Lao Tzu}{}{}
+
 \hugeQuote{KR_SPORT}{One man practicing sportsmanship}{ is better than 100 teaching it.}{Knute Roche}{HF_REP}{}
-
-\hugeQuote{RH_HMY}{Life is defined by how much you do}{, how often you took the difficult path and were rewarded for it.}{Ryan Holiday}{}{(not by how much you own)}
-
-
-% succesful completion
-%%%%%%%%%%%%%%%%%%%%%%
-\hugeQuote{ES_EFFORT}{Super-human effort}{ is not worth a damn unless it produces results.}{Shackleton}{}{}
-
-\hugeQuote{BAML_RERR}{Recognise effort}{\newline
-Reward results}{BAML}{}{}
-\hugeQuote{RH_CCNC}{Close captures no crowns}{}{Ryan Holiday}{}{}
-
-\hugeQuote{RG_KNOW}{The ability to measure people}{ and know who you're dealing with is the most important skill of all.}{Robert Greene}{AE_DO}{}
-
-
-\hugeQuote{CF_DNI}{Do not impose on others}{ what you yourself do not desire.}{Confucious}{}{}
-
+\cleartorightpage
+\HugeQuote{MR_CHIEF}{Kings soon perish}{ who make a habit of justifying their actions to their subjects by saying \say{I have the power} rather than \say{it is my duty}}{Musonius Rufus}{} 
 
 
 % did what he thought was right  
@@ -97,21 +88,26 @@ If you can't do that the blame lies with you or no one.}{Marcus Aurelius}{HT_CRE
 \end{itemize}
 }{Marcus Aurelius}{TF_SLO}{}{}
 
-\hugeQuote{RLS_QUIET}{Quiet minds cannot be perplexed}{ or frightened but go on like a clock \ldots in a thunderstorm}{Robert Louis Stephenson}{}{}
-
 
 \smallQuote{RG_TRUSTYOU}{In the end, if people mistrust you and resist your authority you have only yourself to blame.}{Robert Greene}{}
 
+% succesful completion
+%%%%%%%%%%%%%%%%%%%%%%
+\hugeQuote{ES_EFFORT}{Super-human effort}{ is not worth a damn unless it produces results.}{Shackleton}{}{}
 
-\hugeQuote{C_ABILITY}{Ability will never catch up}{ with the demand for it.}{Confucious}{}{}
+\hugeQuote{BAML_RERR}{Recognise effort}{\newline
+Reward results}{BAML}{}{}
+\hugeQuote{RH_CCNC}{Close captures no crowns}{}{Ryan Holiday}{}{}
 
-\hugeQuote{LR_WORK}{It takes a great talent and skill}{ to conceal a great talent and skill.}{François de La Rochefoucauld}{M_WORK}{}
+\hugeQuote{RG_KNOW}{The ability to measure people}{ and know who you're dealing with is the most important skill of all.}{Robert Greene}{AE_DO}{}
+
+
+\hugeQuote{CF_DNI}{Do not impose on others}{ what you yourself do not desire.}{Confucious}{}{}
 
 %\hugeQuote{RG_WORK2}{Everything is judged by its appearance}{; what is unseen counts for nothing. Do not get lost in the crowd or burried in oblivion.}{Robert Greene}{}{}
 
 
 %\hugeQuote{CWB_FEEL}{They may forget what you said}{ but they will never forget how you made them feel.}{Carl W. Buechner}{}{}
-
 
 
 % transparency
@@ -122,8 +118,10 @@ If you can't do that the blame lies with you or no one.}{Marcus Aurelius}{HT_CRE
 
 \hugeQuote{S_DISCLOSURE}{All defects are lighter in the open}{. They are most pernicious when concealed beneath a pretense of soundness}{Seneca}{}{We don't need to post our defects on Facebook, but we can spend some time thinking about them\llink{http://thephilosophersmail.com/PhilosophicalMeditation.pdf}}
 
-%todo better location for this? generosity maybe 
-%\smallQuote{PS_RAGE}{Patience Wounded too often becomes rage.}{Publius Syrus}{}
+% opacity / subtlty
+%%%%%%%%%%%%%%%%%%%%%
+
+\hugeQuote{LR_WORK}{It takes a great talent and skill}{ to conceal a great talent and skill.}{François de La Rochefoucauld}{M_WORK}{}
 
 \cleartorightpage
 \HugeQuote{FR_DTR}{When you do things right}{, people will wonder if you've done anything at all}{Remains of a computerised space probe, Futurama}{}{} 
