--- a/Learning.tex
+++ b/Learning.tex
@@ -13,10 +13,7 @@
 \cleartorightpage
 \HugeQuote{AS_FORGET}{To forgive and forget}{ means to have thrown away a dearly bought experience.}{Arthur Schopenhaur}{}{}
 
-
-\smallQuote{HST_REACT}{
-Every reaction is a learning process; every significant experience alters your perspective.
-}{Hunter S. Thompson}{}
+\smallQuote{HST_REACT}{Every reaction is a learning process; every significant experience alters your perspective. }{Hunter S. Thompson}{}
 
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -49,6 +46,8 @@ Fewer interruptions, fewer conclusions.
 \hugeQuote{E_PIP}{If you didn't learn these things to put them into practice}{, what did you learn them for?}{Epictetus}{}{} 
 
 \hugeQuote{HST_NOBOAST}{I was not proud of what I had learned}{, but I never doubted that it was worth knowing.}{Hunter S. Thompson}{}{}
+
+\hugeQuote{C_ABILITY}{Ability will never catch up}{ with the demand for it.}{Confucious}{}{}
 
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
