--- a/Resilience.tex
+++ b/Resilience.tex
@@ -92,6 +92,10 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 
 % \hugeQuote{MA_PERSIST1}{So keep at it}{ until it's fully digested. A strong stomach digests whatever it eats. A blazing fire takes whatever you throw on it and makes light and flame.}{Marcus Aurelius}{CP_FAIL}{}
 
+%TODO resilience ? 
+%\hugeQuote{RLS_QUIET}{Quiet minds cannot be perplexed}{ or frightened but go on like a clock \ldots in a thunderstorm}{Robert Louis Stephenson}{}{}
+
+
 \smallQuote{JJ_WORK}{Take a canvas. Put a mark on it. Put another mark on it.}{Jasper Johns}{}{}
 
 \HugeQuote{CC_WORK}{Inspiration is for amateurs}{- the rest of us just show up and get to work}{Chuck Close}{}{}
