--- a/Generosity.tex
+++ b/Generosity.tex
@@ -10,6 +10,9 @@
 
 \smallQuote{AL_JWWWB}{they are just what we would be in their situation}{Abraham Lincoln}{}{} 
 
+%todo review
+\smallQuote{PS_RAGE}{Patience Wounded too often becomes rage.}{Publius Syrus}{}
+
 \cleartorightpage
 
 \HugeQuote{MA_TRUST}{Tell yourself this}{ the people I deal with today will be:
