alter page size to Type-A paperback

--- a/project.tex
+++ b/project.tex
@@ -1,7 +1,10 @@
 \documentclass{book}
 % perfect size would be the same as a pocket penguin
 %Product Dimensions: 11.1 x 0.9 x 18.1 cm
-\usepackage[paperheight=18.1cm,paperwidth=11.1cm]{geometry}
+%\usepackage[paperheight=18.1cm,paperwidth=11.1cm]{geometry}
+
+%but for practicality we'll go for A Format
+\usepackage[paperheight=17.8cm,paperwidth=11.0cm]{geometry}
 
 \usepackage{tabularx}
 \usepackage{ifthen}
