remove dead reference

--- a/Leadership.tex
+++ b/Leadership.tex
@@ -21,7 +21,7 @@
 
 \smallQuote{BB_PRACTICE}{When you are not practicing remember that someone else is and when you meet him he will win.}{Bill Bradley}{}
 
-\smallQuote{RG_CONFLICT}{The more conflicts and difficult situations you put yourself through the more battle tested your mind will be.}{Robert Greene}{RH_RAW}{} %RH_HMY
+\smallQuote{RG_CONFLICT}{The more conflicts and difficult situations you put yourself through the more battle tested your mind will be.}{Robert Greene}{RH_RAW}{}
 
 % right attention
 %%%%%%%%%%%%%%%%%
